--- a/netlify.toml
+++ b/netlify.toml
@@ -6,3 +6,9 @@
   autoLaunch = true
   framework = "#custom"
 
+# The following redirect is intended for use with most SPAs
+# that handle routing internally.
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
